--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-    color: #1974d2;
+    color: #cc0614;
     text-decoration: none;
 }
 
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #1974d2;
+  background: #cc0614;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -55,7 +55,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .back-to-top:hover i {
-  color: #1974d2;
+  color: #cc0614;
 }
 
 .back-to-top.active {
@@ -82,7 +82,7 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: calc(50% - 0px);
   left: calc(50% - 30px);
-  border: 6px solid #1974d2;
+  border: 6px solid #cc0614;
   border-top-color: #151515;
   border-bottom-color: #151515;
   border-radius: 50%;
@@ -147,7 +147,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo a span {
-  color: #1974d2;
+  color: #cc0614;
 }
 
 #header .logo img {
@@ -168,7 +168,7 @@ h1, h2, h3, h4, h5, h6 {
     transition: 0.3s;
     font-size: 14px;
     display: inline-block;
-    border: 2px solid #1974d2;
+    border: 2px solid #cc0614;
 }
 
 .get-started-btn:hover {
@@ -224,7 +224,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #1974d2;
+  color: #cc0614;
 }
 
 .navbar .dropdown ul {
@@ -250,7 +250,7 @@ h1, h2, h3, h4, h5, h6 {
         padding: 10px 20px;
         font-size: 14px;
         text-transform: none;
-        color: #1974d2;
+        color: #cc0614;
         font-weight: 400;
     }
 
@@ -259,7 +259,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  background-color: #1974d2;
+  background-color: #cc0614;
 }
 
 .navbar .dropdown:hover > ul {
@@ -350,7 +350,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
   color: #151515;
-  background-color: #1974d2;
+  background-color: #cc0614;
 }
 
 .navbar-mobile .getstarted {
@@ -383,7 +383,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  background-color: #1974d2;
+  background-color: #cc0614;
 }
 
 .navbar-mobile .dropdown > .dropdown-active {
@@ -427,7 +427,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero h1 span {
-  color: #1974d2;
+  color: #cc0614;
 }
 
 #hero h2 {
@@ -436,6 +436,11 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 24px;
 }
 
+    #hero h4 {
+        color: rgba(255, 255, 255, 0.9);
+        margin: 10px 0 0 0;
+        font-size: 24px;
+    }
 #hero .icon-box {
   padding: 30px 20px;
   transition: ease-in-out 0.3s;
@@ -447,7 +452,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero .icon-box i {
   font-size: 32px;
   line-height: 1;
-  color: #1974d2;
+  color: #cc0614;
 }
 
 #hero .icon-box h3 {
@@ -465,11 +470,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .icon-box h3 a:hover {
-  color: #1974d2;
+  color: #cc0614;
 }
 
 #hero .icon-box:hover {
-  border-color: #1974d2;
+  border-color: #cc0614;
 }
 
 @media (min-width: 1024px) {
@@ -559,7 +564,7 @@ section {
   font-size: 20px;
   left: 0;
   top: -3px;
-  color: #1974d2;
+  color: #cc0614;
 }
 
 .about .content p:last-child {
@@ -598,7 +603,7 @@ section {
 }
 
 .clients .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #1974d2;
+  background-color: #cc0614;
 }
 
 /*--------------------------------------------------------------
@@ -621,7 +626,7 @@ section {
 .features .icon-box i {
   font-size: 48px;
   float: left;
-  color: #1974d2;
+  color: #cc0614;
 }
 
 .features .icon-box p {
@@ -652,7 +657,7 @@ section {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #1974d2;
+  background: #cc0614;
   border-radius: 4px;
   display: flex;
   align-items: center;
@@ -679,7 +684,7 @@ section {
 }
 
 .services .icon-box h4 a:hover {
-  color: #1974d2;
+  color: #cc0614;
 }
 
 .services .icon-box p {
@@ -728,8 +733,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #1974d2;
-  border-color: #1974d2;
+  background: #cc0614;
+  border-color: #cc0614;
   color: #151515;
 }
 
@@ -763,7 +768,7 @@ section {
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
   color: #151515;
-  background: #1974d2;
+  background: #cc0614;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -840,7 +845,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #1974d2;
+  color: #cc0614;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -876,11 +881,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #1974d2;
+  border: 1px solid #cc0614;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #1974d2;
+  background-color: #cc0614;
 }
 
 .portfolio-details .portfolio-info {
@@ -945,7 +950,7 @@ section {
 .counts .content .count-box i {
   display: block;
   font-size: 36px;
-  color: #1974d2;
+  color: #cc0614;
   float: left;
 }
 
@@ -1088,7 +1093,7 @@ section {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #1974d2;
+  background-color: #cc0614;
   opacity: 1;
 }
 
@@ -1152,7 +1157,7 @@ section {
 
 .team .member .social a:hover {
   color: #151515;
-  background: #1974d2;
+  background: #cc0614;
 }
 
 .team .member .social i {
@@ -1200,7 +1205,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  background: #1974d2;
+  background: #cc0614;
   color: #151515;
   float: left;
   width: 44px;
@@ -1290,7 +1295,7 @@ section {
 }
 
 .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
-  border-color: #1974d2;
+  border-color: #cc0614;
 }
 
 .contact .php-email-form input {
@@ -1302,7 +1307,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #1974d2;
+  background: #cc0614;
   border: 0;
   padding: 10px 24px;
   color: #151515;
@@ -1411,7 +1416,7 @@ section {
 }
 
 #footer .footer-top .footer-info h3 span {
-  color: #1974d2;
+  color: #cc0614;
 }
 
 #footer .footer-top .footer-info p {
@@ -1438,7 +1443,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #1974d2;
+  background: #cc0614;
   color: #151515;
   text-decoration: none;
 }
@@ -1463,7 +1468,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #1974d2;
+  color: #cc0614;
   font-size: 18px;
   line-height: 1;
 }
@@ -1486,7 +1491,7 @@ section {
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #1974d2;
+  color: #cc0614;
 }
 
 #footer .footer-top .footer-newsletter form {
@@ -1512,7 +1517,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #1974d2;
+  background: #cc0614;
   color: #151515;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
